Adding file upload, company sign up, swagger installation
