# src/docs/swagger_output.json
@@ -5,7 +5,7 @@
     "title": "Noor API documentation",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:8081",
+  "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
@@ -20,7 +20,7 @@
   "securityDefinitions": {
     "api_key": {
       "type": "apiKey",
-      "name": "access-token",
+      "name": "x-access-token",
       "in": "header"
     },
     "petstore_auth": {
@@ -40,379 +40,7 @@
     "application/json"
   ],
   "paths": {
-    "/client/register": {
-      "post": {
-        "tags": [
-          "Client"
-        ],
-        "description": "client services",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "first_name": {
-                  "example": "any"
-                },
-                "last_name": {
-                  "example": "any"
-                },
-                "father_name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "img_id": {
-                  "example": "any"
-                },
-                "phone": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                },
-                "role": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Adding clients",
-            "schema": {
-              "$ref": "#/definitions/Client"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/login": {
-      "post": {
-        "tags": [
-          "Client"
-        ],
-        "description": "client services",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Thsi api helps to login",
-            "schema": {
-              "$ref": "#/definitions/Client"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/list": {
-      "post": {
-        "tags": [
-          "Client"
-        ],
-        "description": "this api response is list of all clients",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "pageNumber": {
-                  "example": "any"
-                },
-                "pageSize": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "client services",
-            "schema": {
-              "$ref": "#/definitions/Client"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/resetpasswordclient": {
-      "post": {
-        "tags": [
-          "Client"
-        ],
-        "description": "this api response is list of all clients",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "client services",
-            "schema": {
-              "$ref": "#/definitions/Client"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/resetpassword/confirmationp/{email}/{token}": {
-      "post": {
-        "tags": [
-          "Client"
-        ],
-        "description": "this api response is list of all clients",
-        "parameters": [
-          {
-            "name": "email",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "token",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "client services",
-            "schema": {
-              "$ref": "#/definitions/Client"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/update/{id}": {
-      "post": {
-        "tags": [
-          "Client"
-        ],
-        "description": "client services",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "first_name": {
-                  "example": "any"
-                },
-                "last_name": {
-                  "example": "any"
-                },
-                "father_name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "img_id": {
-                  "example": "any"
-                },
-                "phone": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                },
-                "role": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "This api helps to update exact user by id",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/auth/{id}": {
-      "patch": {
-        "tags": [
-          "Client"
-        ],
-        "description": "client services",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "This api helps to update exact user by id",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/delete/{id}": {
-      "delete": {
-        "tags": [
-          "Client"
-        ],
-        "description": "this api helps to delete exact client by id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Client successfully deleted",
-            "schema": {
-              "$ref": "#/definitions/Client"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/client/getone/{id}": {
-      "get": {
-        "tags": [
-          "Client"
-        ],
-        "description": "api hels to get exact client by id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "The result of this",
-            "schema": {
-              "$ref": "#/definitions/Client"
-            }
-          },
-          "400": {
-            "description": "Xatolik roy berdi"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/user/register": {
+    "/api/v1/user/signup": {
       "post": {
         "tags": [
           "User"
@@ -426,28 +54,28 @@
               "type": "object",
               "properties": {
                 "first_name": {
-                  "example": "any"
+                  "example": "first_name"
                 },
                 "last_name": {
-                  "example": "any"
+                  "example": "last_name"
                 },
                 "father_name": {
-                  "example": "any"
+                  "example": "father_name"
                 },
                 "email": {
-                  "example": "any"
+                  "example": "email@gmail.com"
                 },
-                "img_id": {
-                  "example": "any"
+                "img_link": {
+                  "example": "img_link"
                 },
                 "phone": {
-                  "example": "any"
+                  "example": "+989239823233."
                 },
                 "password": {
-                  "example": "any"
+                  "example": "541A5^&*fgaQW"
                 },
                 "role": {
-                  "example": "any"
+                  "example": "admin"
                 }
               }
             }
@@ -455,9 +83,9 @@
         ],
         "responses": {
           "200": {
-            "description": "Adding clients",
+            "description": "User registerred successfully",
             "schema": {
-              "$ref": "#/definitions/Client"
+              "$ref": "#/definitions/User"
             }
           },
           "400": {
@@ -508,7 +136,7 @@
         }
       }
     },
-    "/user/list": {
+    "/api/v1/user/list": {
       "post": {
         "tags": [
           "User"
@@ -529,6 +157,8 @@
                 }
               }
             }
+          },{
+            "$ref": "#/securityDefinitions/api_key"
           }
         ],
         "responses": {
